--- a/wiki/HowToUseEntropyDB.wiki
+++ b/wiki/HowToUseEntropyDB.wiki
@@ -39,7 +39,7 @@ The following restrictions apply:
   * Only descendants of _NSObject_ can be stored.
   * One cannot store instances of Cocoa classes directly. Collections (_NSArray_, _NSSet_, _NSDictionary_) can be stored if they are instance variables of custom objects.
   * Instance variables of the following primitive types are stored: _int, long, char, short, long long, float, double_ (unsigned types are not supported in the current version).
-  * Instance variables which are instances of objects are expected to have their retain count equal to 1.
+  * Instance variables which are instances of objects will be restored with their retain count equal to 1.
   * You cannot store object hierarchies with reference cycles.
 
 == Querying objects from a database ==
