--- a/wiki/Entroy20Differences.wiki
+++ b/wiki/Entroy20Differences.wiki
@@ -3,3 +3,7 @@
 
 || *Feature* || *Entropy v1.2* || *Entropy v2.0* ||
 || License || LGPL || GPL ||
+|| Backend || relational || post-relational ||
+|| Persistable objects || subclasses of _NSObject_ || classes conforming to _EXMappableObject_ ||
+|| Optimized queries || via _EXPredicate_ || native queries ||
+|| Supported OS || OS X 10.5+/iPhone || OS X 10.6 ||
